--- a/index.html
+++ b/index.html
@@ -295,8 +295,6 @@
         color: #d4af37;
         border-bottom-color: #d4af37;
       }
-
-      /* --- ESTILOS PARA FLIP CARD EQUIPO --- */
       .flip-card {
         background-color: transparent;
         width: 100%;
@@ -374,21 +372,37 @@
       .socialbar svg:hover {
         color: #fff;
       }
+
+      /* --- HEADER SCROLL --- */
+      header {
+        transition: all 0.3s ease-in-out;
+      }
+      header.scrolled {
+        background-color: #111827;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
+      }
+      header .logo {
+        transition: height 0.3s ease-in-out;
+      }
+      header.scrolled .logo {
+        height: 3rem; /* 48px */
+      }
     </style>
   </head>
 
   <body class="bg-black text-gray-200 font-sans">
     <!-- Header -->
     <header
-      class="bg-black/80 backdrop-blur-sm fixed top-0 left-0 right-0 z-50"
+      id="main-header"
+      class="bg-black/80 backdrop-blur-sm fixed top-0 left-0 right-0 z-50 py-2"
     >
-      <div
-        class="container mx-auto px-6 py-2 flex justify-between items-center"
-      >
+      <div class="container mx-auto px-6 flex justify-between items-center">
         <a href="#inicio" aria-label="Volver al inicio">
           <img
             src="/img/IMG_0177.JPG"
-            class="h-16 w-auto object-contain rounded-xl"
+            class="logo h-16 w-auto object-contain rounded-xl"
             alt="Logo de Michael The Barber Studios"
           />
         </a>
@@ -1660,23 +1674,24 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-black border-t border-gray-800">
-      <div class="container mx-auto px-6 py-8 text-center text-gray-500">
-        <h3 class="font-display text-2xl text-white tracking-wider">
-          MB STUDIOS
-        </h3>
-        <p class="mt-4">Lago Blanco 1585, 1803000 Coquimbo, Chile</p>
-        <p>+56 9 1234 5678</p>
-        <div class="mt-6">
+    <footer class="bg-gray-900 border-t border-gray-800">
+      <div class="container mx-auto px-6 py-12 text-center text-gray-400">
+        <img
+          src="/img/IMG_0177.JPG"
+          class="h-20 w-auto mx-auto rounded-xl mb-4"
+          alt="Logo de Michael The Barber Studios en blanco"
+        />
+        <p class="text-lg italic">"Donde tu estilo encuentra precisión."</p>
+        <div class="mt-6 flex justify-center space-x-6">
           <a
             href="https://www.instagram.com/michael.the.barber_studios/"
             target="_blank"
             rel="noopener noreferrer"
-            class="inline-block hover:text-white transition"
+            class="hover:text-white transition"
             aria-label="Visita nuestro Instagram"
           >
             <svg
-              class="w-6 h-6"
+              class="w-8 h-8"
               fill="currentColor"
               viewBox="0 0 24 24"
               aria-hidden="true"
@@ -1686,8 +1701,21 @@
               />
             </svg>
           </a>
+          <a
+            href="https://wa.me/56912345678"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="hover:text-white transition"
+            aria-label="Contáctanos por WhatsApp"
+          >
+            <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 4.315 1.731 6.086l.001.004 4.971 4.971z"
+              />
+            </svg>
+          </a>
         </div>
-        <p class="text-xs mt-6">
+        <p class="text-xs mt-8">
           &copy; 2025 Michael The Barber Studios. Todos los derechos reservados.
         </p>
         <p class="text-xs mt-1">Diseñado por JuanEmilioDev</p>
@@ -1839,6 +1867,16 @@
             selectCita.removeAttribute("name");
           });
         }
+
+        // --- Lógica para el header dinámico ---
+        const header = document.getElementById("main-header");
+        window.addEventListener("scroll", () => {
+          if (window.scrollY > 50) {
+            header.classList.add("scrolled");
+          } else {
+            header.classList.remove("scrolled");
+          }
+        });
       });
     </script>
   </body>
